[AI Fix] (a11y ADA compliance): set dt-published text color to #757575 for WCAG contrast

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -228,6 +228,10 @@
   color: #757575;
 }
 
+.post-meta .dt-published {
+  color: #757575;
+}
+
 .post-link {
   display: block;
   @include relative-font-size(1.5);
